fix: fixes texts legibility

--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body {
 
 .todo-app h1 {
     font-size: 2.5rem;
+    text-shadow: 4px 4px 10px rgba(239, 168, 168, 0.5);
 
 }
 
@@ -65,7 +66,7 @@ body {
     outline: none;
     border-radius: 25px;
     background: rgba(250, 212, 221, 0.214);
-    color: #dbdbdb;
+    color: #fff;
 }
 
 .input-area input::placeholder {
